定时任务更新服务发现的信息

--- a/lib/plugin/egg-grpc/package.json
+++ b/lib/plugin/egg-grpc/package.json
@@ -3,6 +3,7 @@
         "name": "grpc"
     },
     "dependencies": {
-        "consul": "^0.30.0"
+        "consul": "^0.30.0",
+        "lodash": "^4.17.4"
     }
 }
