consul和grpc分开为2个插件

--- a/lib/plugin/egg-consul/package.json
+++ b/lib/plugin/egg-consul/package.json
@@ -1,6 +1,6 @@
 {
     "eggPlugin": {
-        "name": "grpc"
+        "name": "consul"
     },
     "dependencies": {
         "consul": "^0.30.0",
