--- a/lib/plugin/egg-grpc/package.json
+++ b/lib/plugin/egg-grpc/package.json
@@ -3,6 +3,8 @@
         "name": "grpc"
     },
     "dependencies": {
-        "glob": "^7.1.2"
+        "glob": "^7.1.2",
+        "grpc": "^1.7.2",
+        "lodash": "^4.17.4"
     }
 }
