--- a/lib/plugin/egg-vue-ssr/package.json
+++ b/lib/plugin/egg-vue-ssr/package.json
@@ -3,8 +3,6 @@
     "name": "vueSsr"
   },
   "dependencies": {
-    "chrome-render": "^1.4.1",
-    "vue": "^2.5.9",
-    "vue-server-renderer": "^2.5.9"
+    "puppeteer": "^0.13.0"
   }
 }
