--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.0.0",
+    "egg-graphql": "^2.0.0",
     "egg-scripts": "^2.1.0"
   },
   "devDependencies": {
